--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio of Somawatey Khov - A Web Developer and Software Engineer specializing in full-stack development, UI/UX design, and mobile applications.">
     <meta name="keywords" content="Somawatey Khov, Web Developer, Software Engineer, Full Stack Developer, Flutter Developer, Cambodia, Intern">
     <meta name="author" content="Somawatey Khov">
-    <!-- <link rel="canonical" href="https://your-portfolio-url.com"> -->
+    <link rel="canonical" href="https://khovsomawateyportfolio.netlify.app">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles/main.css">
