--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- SEO Meta Tags -->
-    <title>Somawatey Khov | Web Developer & Software Engineer</title>
-    <meta name="description" content="Portfolio of Somawatey Khov - A Web Developer and Software Engineer specializing in full-stack development, UI/UX design, and mobile applications.">
-    <meta name="keywords" content="Somawatey Khov, Web Developer, Software Engineer, Full Stack Developer, Flutter Developer, Cambodia, Intern">
+     <!-- Primary Meta Tags -->
+    <title>Somawatey Khov | Web Developer & Software Engineer in Cambodia</title>
+    <meta name="title" content="Somawatey Khov - Web Developer Portfolio">
+    <meta name="description" content="Portfolio of Somawatey Khov - A passionate Web Developer from Cambodia specializing in Flutter, React, and full-stack development. Explore my projects and experience.">
+    <meta name="keywords" content="Somawatey Khov, Cambodia Developer, Web Developer Cambodia, Flutter Developer, Software Engineer Phnom Penh, CADT Student">
     <meta name="author" content="Somawatey Khov">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://khovsomawateyportfolio.netlify.app">
+    <meta property="og:title" content="Somawatey Khov - Web Developer Portfolio">
+    <meta property="og:description" content="Explore my web development projects and skills. Flutter | React | Full-Stack Development">
+    <meta property="og:image" content="assets/images/profile.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://khovsomawateyportfolio.netlify.app">
+    <meta property="twitter:title" content="Somawatey Khov - Web Developer Portfolio">
+    <meta property="twitter:description" content="Full-stack developer specializing in Flutter and React applications">
+    <meta property="twitter:image" content="assets/images/profile.jpg">
+
+    <!-- Existing links -->
     <link rel="canonical" href="https://khovsomawateyportfolio.netlify.app">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
