--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Somawatey Khov">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
+    <meta name="google-site-verification" content="0p3yAhWqvUJ7S0vk07KZ47cV6k-4t6nA-kulounBXSA" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
