Added SEO optimization

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Somawatey Khov">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
-    <meta name="google-site-verification" content="0p3yAhWqvUJ7S0vk07KZ47cV6k-4t6nA-kulounBXSA" />
+    <meta name="google-site-verification" content="google0d41cfaa6e3b293c" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
