--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- Primary Meta Tags -->
-    <title>Somawatey Khov | Web Developer & Software Engineer in Cambodia</title>
+    <title>Somawatey Khov | Web Developer & Software Engineer</title>
     <meta name="title" content="Somawatey Khov - Web Developer Portfolio">
     <meta name="description" content="Portfolio of Somawatey Khov - A passionate Web Developer from Cambodia specializing in Flutter, React, and full-stack development. Explore my projects and experience.">
     <meta name="keywords" content="Somawatey Khov, Cambodia Developer, Web Developer Cambodia, Flutter Developer, Software Engineer Phnom Penh, CADT Student">
