--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- Primary Meta Tags -->
-    <title>Somawatey Khov | Web Developer & Software Engineer</title>
+    <title>Somawatey Khov | Web Developer & Software Engineer in Cambodia</title>
+     <!-- Meta tags for SEO  -->
     <meta name="title" content="Somawatey Khov - Web Developer Portfolio">
     <meta name="description" content="Portfolio of Somawatey Khov - A passionate Web Developer from Cambodia specializing in Flutter, React, and full-stack development. Explore my projects and experience.">
     <meta name="keywords" content="Somawatey Khov, Cambodia Developer, Web Developer Cambodia, Flutter Developer, Software Engineer Phnom Penh, CADT Student">
@@ -12,27 +12,21 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="google-site-verification" content="0p3yAhWqvUJ7S0vk07KZ47cV6k-4t6nA-kulounBXSA" />
-    
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://khovsomawateyportfolio.netlify.app">
-    <meta property="og:title" content="Somawatey Khov - Web Developer Portfolio">
-    <meta property="og:description" content="Explore my web development projects and skills. Flutter | React | Full-Stack Development">
-    <meta property="og:image" content="assets/images/profile.jpg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://khovsomawateyportfolio.netlify.app">
-    <meta property="twitter:title" content="Somawatey Khov - Web Developer Portfolio">
-    <meta property="twitter:description" content="Full-stack developer specializing in Flutter and React applications">
-    <meta property="twitter:image" content="assets/images/profile.jpg">
 
     <!-- Existing links -->
     <link rel="canonical" href="https://khovsomawateyportfolio.netlify.app">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/hero.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/about.css">
+    <link rel="stylesheet" href="styles/skill.css">
+    <link rel="stylesheet" href="styles/experience.css">
+    <link rel="stylesheet" href="styles/education.css">
+    <link rel="stylesheet" href="styles/certificate.css">
+    <link rel="stylesheet" href="styles/achievement.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
